# ask-alex

./: .gitignore  README.md  build.sh  main.py
backend/: .dockerignore  .gitignore  main.py
backend/app/: Dockerfile  main.py  requirements.txt  test.py
backend/db/: 001_create_documents_table.sql  002_activate_pg_trgm_extension.sql  003_create_llamaindex_docs_table.sql  004_create_doc_id_indexes.sql  005_create_job_queue_table.sql  006_add_heartbeat_column.sql  007_create_users_table.sql  008_create_chats_table.sql  008_create_sessions_table.sql  009_create_department_index.sql  010_create_collection_index.sql  011_create_author_index.sql  012_create_title_index.sql  013_create_publication_date_index.sql  014_create_collection_distinct_list.sql  015_create_department_distinct_list.sql  016_add_documents_text_column.sql  017_add_bm25_index.sql  018_create_chats_random_id.sql  tern.conf
backend/eval/: evaluation.py  generate_dataset.py  output_validator.py  prompts.py  qa.csv
backend/generate/: Dockerfile  __init__.py  agent_with_history.py  chat_agent.py  chat_flow.py  grade_document.py  intent_classifier.py  main.py  prompts.py  rag_classifier.py  rag_pipeline.py  reflection_agent.py  reflection_test.py  research_team.ipynb  utils.py
backend/inference/: Dockerfile
backend/utils/: pyproject.toml
backend/utils/src/ask_alex_utils/rabbitmq_pipeline/: __init__.py  pika_credentials.py  pipeline_step.py
frontend/: .air.toml  .dockerignore  Dockerfile  go.mod  go.sum  main.go  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
(+148 files in other folders)
