[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask_alex_utils"
version = "0.0.1"
authors = [
  { name="John Gerving", email="gervingjohn@gmail.com" },
]
description = "Utilities for the ASK ALEX backend"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
